[tool.poetry]
name = "repl_python3_OvalAmusedState"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
schedule = "^1.1.0"
twython = "^3.9.1"
feedparser = "^6.0.8"
gspread = "^4.0.1"
pyasn1-modules = "^0.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
